# db-eplustbl-reader

./: README.md  main.py  pyproject.toml
.github/workflows/: run-build.yml  run-linting.yml  run-tests.yml
db_temperature_distribution/: logger.py  parser.py  writer.py
scripts/: build.bat  build_and_test.cmd  get_exe_name.py
src/: db_logger.py  db_table.py  db_temperature_distribution.py  db_writer.py
tests/: conftest.py  test_db_temperature_distribution.py  test_executable.py  test_package.py
tests/test_files/: eplustbl(Filtered).htm  eplustbl.htm  expected_outputs.json
