[tool.poetry]
name = "db-temperature-distribution"
version = "0.1.4"
description = ""
authors = ["Vojtech Panek <vojtech.panek@designbuilder.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
eppy = "^0.5.56"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", python = "^3.6.8"}
flake8 = "^3.9.2"
pylint = "^2.10.2"
pre-commit = "^2.15.0"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pyinstaller = "^4.5.1"

[tool.isort]
profile = "black"

[tool.pylint.master]
ignore = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

